Fixed some of the mobile issues with spacing and sizing of items

--- a/app/styles/_main.css
+++ b/app/styles/_main.css
@@ -8,6 +8,7 @@
 @import "tabs.css";
 @import "grids.css";
 @import "trees.css";
+@import "map.css";
 
 :root {
     --hvz-primary: #37462e;
@@ -38,6 +39,8 @@
     --hvz-green-dark: #297f29;
     --hvz-green: #5cb85c;
     --hvz-green-light: #d9ffd9;
+
+    font-size: 16px;
 }
 
 *, ::after, ::before {
@@ -49,19 +52,11 @@
     display: none !important;
 }
 
-@media(max-width: 400px) {
-     :root {
-        zoom: .75;
-        -moz-transform: scale(.75);
-        -moz-transform-origin: 0 0;
-    }
-}
-
 body {
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
     color: #333;
     background-color: var(--hvz-background);
-    line-height: 1.5;
+    margin: 0;
 }
 
 hr {
@@ -77,33 +72,32 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2.5em;
 }
 
 h2 {
-    font-size: 2.25rem;
+    font-size: 2.25em;
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 2em;
 }
 
 h4 {
-    font-size: 1.75rem;
+    font-size: 1.75em;
 }
 
 h5 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 h6 {
-    font-size: 1.25rem;
+    font-size: 1.25em;
 }
 
-#zombieTree,
-#map {
+#zombieTree {
     width: 100%;
-    height: calc(100% - 100px);
+    height: calc(100% - 112px);
 }
 
 .text-centre {
@@ -123,8 +117,8 @@ h6 {
 }
 
 .icon-size {
-    max-width: 40px;
-    max-height: 40px;
+    max-width: 2.5rem;
+    max-height: 2.5rem;
 }
 
 .float-right {
@@ -154,18 +148,22 @@ p+ul {
     margin-top: -15px;
 }
 
-body>div[ui-view="main"] {
-    position: relative;
-    top: 50px;
-    padding: 10px 20px;
-}
-
-body>div[ui-view="navigation"] {
-    position: absolute;
-    top: 0px;
-}
-
 pre {
-    margin: 0px;
+    margin: 0;
     display: -webkit-inline-box;
+}
+
+body>div[ui-view="main"] {
+    padding: 1rem;
+    height: calc(100vh - 6rem);
+}
+
+@media  only screen and (-webkit-min-device-pixel-ratio: 1.3),
+        only screen and (-o-min-device-pixel-ratio: 13/10),
+        only screen and (min-resolution: 120dpi),
+        only screen and (max-width: 900px)
+    {
+    :root {
+        font-size: 32px;
+    }
 }
