--- a/app/styles/inputs.css
+++ b/app/styles/inputs.css
@@ -19,6 +19,14 @@ textarea:disabled {
     background-color: var(--hvz-disabled);
 }
 
+select {
+    background-color: var(--hvz-text-light);
+    border: 1px solid;
+    cursor: pointer;
+    border-radius: 5px;
+    height: auto;
+}
+
 input[type="color"]::-webkit-color-swatch-wrapper {
 	padding: 0;
 }
@@ -101,9 +109,9 @@ button {
     bottom: 0;
     background-color: var(--hvz-text-light);
     border: 1px solid var(--hvz-border-dark);
-    border-radius: 10px;
-    padding: 8px 10.28px;
-    font-size: 32px;
+    border-radius: 1rem;
+    padding: 0.5rem 0.75rem;
+    font-size: 3rem;
     height: auto;
     transform: scaleY(0);
     transform-origin: bottom;
@@ -197,10 +205,24 @@ label:disabled {
     flex-direction: row;
 }
 
+.login-form>form {
+    width: -webkit-fill-available
+}
+
 .login-form button {
     margin-left: 5px;
 }
 
-.login-form>form {
-    width: 600px;
+@media  only screen and (-webkit-min-device-pixel-ratio: 1.3),
+        only screen and (-o-min-device-pixel-ratio: 13/10),
+        only screen and (min-resolution: 120dpi),
+        only screen and (max-width: 900px)
+    {
+    button, input {
+        font-size: 32px;
+    }
+
+    .login-form {
+        max-width: 800px;
+    }
 }
