--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -1,34 +1,28 @@
 nav {
     background-color: var(--hvz-header);
     font-weight: bold;
-    display: flex;
-    flex-direction: row;
-    max-height: 60px;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-    left: 0;
+    display: grid;
+    grid-template-columns: 3.5em 13em auto 1fr;
+    align-items: center;
 }
 
 nav>a {
     font-size: 1.25rem;
-    line-height: 50px;
+    margin-top: -0.25rem;
 }
 
 nav>.navbar {
     display: flex;
     flex-direction: row;
-    padding: 8px 16px;
 }
 
 nav img {
-    padding: 5px;
-    height: 50px;
+    padding: 0.25rem;
+    height: 3rem;
 }
 
 nav>.navbar a {
-    margin: 5px 10px;
-    vertical-align: middle;
+    margin: 0.5rem;
 }
 
 nav a {
@@ -42,24 +36,24 @@ nav a:hover, nav a:focus {
 }
 
 nav>select {
-    right: 10;
-    top: 8;
-    position: absolute;
-    background-color: var(--hvz-text-light)!important;
-    border: 1px solid!important;
-    cursor: pointer;
-    width: calc(100% - 325px)!important;
-    min-width: 85px;
-    max-width: 200px;
-    border-radius: 5px;
     display: none;
+    margin-left: 16rem;
+    margin-right: 1rem;
 }
 
-@media(max-width: 1000px) {
+@media  only screen and (-webkit-min-device-pixel-ratio: 1.3),
+        only screen and (-o-min-device-pixel-ratio: 13/10),
+        only screen and (min-resolution: 120dpi),
+        only screen and (max-width: 900px) {
     nav>select {
         display: inherit;
+        margin-left: auto;
+        font-size: 1rem;
     }
-    nav>.navbar {
+    nav>.navbar a {
         display: none;
+    }
+    nav {
+        width: 100vw;
     }
 }
